# bevy_flash

./: Cargo.toml  LICENSE-MIT  README.md  README.zh_CN.md  Readme.md  Readme.zh_CN.md  repomix-output.txt
assets/: 10010.swf  123620-.swf  123620-idle.swf  123680-idle.swf  12_3_001.swf  131381-idle.swf  22.swf  2930.swf  30.swf  32.swf  4.swf  435.swf  983.swf  Zombie_charred.swf  ao.swf  attack.swf  bg.swf  bitmap.swf  bitmap_animation.swf  blend.swf  blend_add.swf  blend_demo.swf  blend_lighten.swf  blend_screen.swf  blend_sub.swf  bloodEffect.swf  blur.swf  bund.swf  color.swf  daifu.swf  double_ref.swf  double_ref2.swf  effect1143.swf  effect1209.swf  effect1217.swf  filter.swf  filter_blend.swf  filter_test.swf  frame_animation.swf  frames.swf  (+46 more)
assets/shaders/: bitmap.wgsl  blur.wgsl  color.wgsl  gradient.wgsl  post_processing.wgsl
assets/yue_se/: frames.swf
docs/: book.toml
docs/src/: SUMMARY.md  chapter_1.md  section_1_1.md  section_1_2.md
docs/src/appendix/: faq01.md  faq02.md  faq03.md  glossary.md
docs/src/development/: debugging.md  profiling.md
examples/: animate_ctrl.rs  blur.rs  full_screen.rs  glow.rs  luoke.rs  mac.rs  morph_shape_test.rs  play.rs  sample.rs  sample2.rs  seer.rs  shape.rs  sprite.rs
src/: assets.rs  bundle.rs  commands.rs  flash_bundle.rs  flash_utils.rs  lib.rs  player.rs  plugin.rs  render.rs  shape.rs  shapes.rs  swf.rs  system.rs  test.rs
src/flash_utils/: characters.rs  container.rs  display_object.rs  library.rs  render.rs  util.rs
src/flash_utils/display_object/: graphic.rs  morph_shape.rs  movie_clip.rs
src/render/: blend_pipeline.rs  commands.rs  graph.rs  intermediate_texture.rs  intermediate_texture_driver_node.rs  material.rs  node.rs  offscreen_texture.rs  part_mesh2d.rs  pipeline.rs  raw_vertex.rs  sort_item.rs  tessellator.rs  texture_attachment.rs
src/render/filter/: blur.rs  mod.rs
src/render/graph/: filter.rs  filter_driven_node.rs  filter_node.rs  flash_filter_driven_node.rs  main_transparent_pass_2d_node.rs  texture_synthesis.rs  upscaling.rs
src/render/shaders/: bitmap.wgsl  color.wgsl  common.wgsl  gradient.wgsl  graphic.wgsl  swf_graphic.wgsl
src/render/utils/: bitmap.rs  error.rs  filters.rs  matrix.rs  mod.rs  shape_utils.rs  transform.rs
src/swf/: characters.rs  container.rs  display_object.rs  filter.rs  library.rs  tag_utils.rs
src/swf/display_object/: graphic.rs  morph_shape.rs  movie_clip.rs
src/swf_runtime/: character.rs  decoder.rs  display_object.rs  filter.rs  graphic.rs  matrix.rs  mod.rs  morph_shape.rs  movie_clip.rs  shape_utils.rs  tag_utils.rs  tessellator.rs  transform.rs
swf_macro/: Cargo.toml
swf_macro/src/: lib.rs
(+12 files in other folders)
